--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "EdScratchCzech",
-  "version": "1.8",
-  "description": "Translate EdScratch blocks into Czech",
+  "name": "EdScratch 日本語化",
+  "version": "1.0",
+  "description": "EdScratch V3を日本語化します。Scratchと相互に移行しやすいように、Scratchに近い翻訳になっています。",
   "manifest_version": 3,
   "icons": {
     "128": "icon.png"
@@ -20,25 +20,12 @@
   "host_permissions": [
     "*://*.edscratchapp.com/*"
   ],
-  "content_scripts": [
-    {
-      "matches": [
-        "*://*.edscratchapp.com/v2*",
-        "*://cloud.edscratchapp.com/*"
-      ],
-      "js": [
-        "translate_dom.js"
-      ]
-    }
-  ],
   "web_accessible_resources": [
     {
       "resources": [
-        "blockly_compressed_vertical_czech.js",
-        "blocks_compressed_vertical_czech.js",
-        "blocks_compressed_vertical_czech_v3.js",
-        "errorMessages_czech.js",
-        "messages_czech_v3.js"
+        "v3/blockly_compressed_vertical.js",
+        "v3/blocks_compressed_vertical.js",
+        "v3/messages.js"
       ],
       "matches": [
         "*://*.edscratchapp.com/*"
